# AINewsCrowlBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  bot.py  config.py  curation_intent.py  curator.py  database.py  docker-compose.sh  docker-compose.yml  dry_run.py  main.py  pipeline.py  pyproject.toml  ranker.py  requirements.txt  token_tracker.py
.claude/: settings.json  settings.local.json
.claude/agents/: news-curation-agent.md  preference-analysis-agent.md
.claude/project/: directory-structure.md  file-roles.md  pipeline.md
.claude/skills/: ai-social-media-content.md  article-finder.md  article-reviewer.md  claude-api.md  discord-bot.md  hackernews.md  mcp-builder.md  preference-analyzer.md  preference-intelligence.md  ralph-loop.md  sqlite-ops.md
.github/workflows/: deploy.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-dockerignore-content.txt  task-2-deploy-guardrails.txt  task-2-workflow-validate.txt  task-3-docs-guardrails.txt  task-3-docs-secrets.txt
.sisyphus/notepads/ci-cd-auto-deploy/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: ci-cd-auto-deploy.md
agents/: news_curation_agent.py  preference_analysis.py
crawlers/: __init__.py  base.py  hackernews.py  reddit.py  rss.py  web_scrapers.py  youtube.py
data/: curation_intent.example.json
docs/: deployment.md  discord-setup.md  token-optimization.md
tests/: conftest.py  test_curation_intent.py  test_curator.py  test_database.py  test_news_curation_agent.py  test_pipeline.py  test_ranker.py
